k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api-mytask.com  # Replace with your domain or leave empty for wildcard
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-api-service
                port:
                  number: 80
13.127.170.173
15.207.66.85
13.126.237.30
